--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 body {
-    background: linear-gradient(180deg, rgba(245, 245, 245, 0.6) 100px, rgba(245, 245, 245, 0.9) 200px, rgba(252, 252, 252, 1) 300px), url('https://gestion.pe/resizer/rqcgomaCUvnwRzuI10vLQ7on8-o=/980x528/smart/arc-anglerfish-arc2-prod-elcomercio.s3.amazonaws.com/public/RNA5HAHIHBGEJFS2KB72IOWI3E.jpg');
+    background: linear-gradient(180deg, rgba(245, 245, 245, 0.6) 150px, rgba(245, 245, 245, 0.9) 300px, rgba(252, 252, 252, 1) 450px), url('https://mk0shakespearem3d9jn.kinstacdn.com/wp-content/uploads/2020/03/Pneumonia-coronavirus-scaled.jpg');
     background-size: 100% auto;
     font-family: 'IBM Plex Sans', sans-serif;
     font-weight: 300;
